--- a/vignettes/README.Rmd
+++ b/vignettes/README.Rmd
@@ -5,6 +5,9 @@ date: "3/11/2017"
 output: html_document
 ---
 
+[![Travis-CI Build Status](https://travis-ci.org/frenkg/fars1.svg?branch=master)](https://travis-ci.org/frenkg/fars1)
+
+
 
 ## FARS FUNCTIONS
 
